fix(theme-default): add missing color transitions

--- a/packages/@vuepress/theme-default/src/client/styles/navbar.scss
+++ b/packages/@vuepress/theme-default/src/client/styles/navbar.scss
@@ -171,3 +171,7 @@
     height: 1.25rem;
   }
 }
+
+.DocSearch {
+  transition: background-color var(--t-color);
+}
